Mostly fix a number of typos in the manual pages Fix a bug with macro deletion in gspl-xpq Add double-click to edit macro. A few tidy-ups on spacing.

--- a/doc/poddoc/man/dosspwrite.8
+++ b/doc/poddoc/man/dosspwrite.8
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "DOSSPWRITE 8"
-.TH DOSSPWRITE 8 "2008-07-11" "GNUspool Release 23" "GNUspool Print Manager"
+.TH DOSSPWRITE 8 "2008-08-18" "GNUspool Release 1" "GNUspool Print Manager"
 .SH "NAME"
 dosspwrite \- write messages to Windows PC
 .SH "SYNOPSIS"
@@ -140,7 +140,7 @@ dosspwrite \- write messages to Windows PC
 .IX Header "DESCRIPTION"
 \&\fBDosspwrite\fR sends messages to Windows PCs similar to \fIspwrite\fR\|(8) does
 for user's terminals in response to the equivalents of the \f(CW\*(C`\-w\*(C'\fR
-and \f(CW\*(C`\-A\*(C'\fR options of \fIspr\fR\|(1). This is only done for jobs which
+and \f(CW\*(C`\-A\*(C'\fR options of \fIgspl\-pr\fR\|(1). This is only done for jobs which
 originated on Windows PCs.
 .PP
 The Windows \s-1PC\s0 must be running \fBsprserv\fR for this to be effectual.
