--- a/doc/poddoc/man/spexec.8
+++ b/doc/poddoc/man/spexec.8
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SPEXEC 8"
-.TH SPEXEC 8 "2008-07-11" "GNUspool Release 23" "GNUspool Print Manager"
+.TH SPEXEC 8 "2008-08-18" "GNUspool Release 1" "GNUspool Print Manager"
 .SH "NAME"
 spexec \- run commands for macros
 .SH "SYNOPSIS"
@@ -139,7 +139,7 @@ spexec \- run commands for macros
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
 \&\fBSpexec\fR runs commands for macros under the identity of the invoking
-user. This is required because \fIspq\fR\|(1) \fIxspq\fR\|(1) \fIxmspq\fR\|(1) are set-user
+user. This is required because \fIgspl\-pq\fR\|(1) \fIgspl\-xpq\fR\|(1) \fIgspl\-xmpq\fR\|(1) are set-user
 programs (to other than \f(CW\*(C`root\*(C'\fR) and there is an inherent security
 breach in many versions of Unix in that such programs cannot divest
 themselves of traces of the set-user user id.
