--- a/doc/poddoc/man/spjobdump.8
+++ b/doc/poddoc/man/spjobdump.8
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SPJOBDUMP 8"
-.TH SPJOBDUMP 8 "2008-07-11" "GNUspool Release 23" "GNUspool Print Manager"
+.TH SPJOBDUMP 8 "2008-08-18" "GNUspool Release 1" "GNUspool Print Manager"
 .SH "NAME"
 spjobdump \- support unqueue of job files
 .SH "SYNOPSIS"
@@ -137,15 +137,15 @@ spjobdump \- support unqueue of job files
 \&\fBspjobdump\fR \fIoptions\fR
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
-\&\fBspjobdump\fR is invoked by \fIspq\fR\|(1), \fIxspq\fR\|(1),  \fIxmspq\fR\|(1) and \fIsqdel\fR\|(1) to \fIunqueue\fR
+\&\fBspjobdump\fR is invoked by \fIgspl\-pq\fR\|(1), \fIgspl\-xpq\fR\|(1),  \fIgspl\-xmpq\fR\|(1) and \fIgspl\-qdel\fR\|(1) to \fIunqueue\fR
 jobs when required.
 .PP
 It is not intended for general use and is not documented further.
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
-\&\fIspq\fR\|(1),
-\&\fIsqdel\fR\|(1),
-\&\fIxmspq\fR\|(1).
+\&\fIgspl\-pq\fR\|(1),
+\&\fIgspl\-qdel\fR\|(1),
+\&\fIgspl\-xmpq\fR\|(1).
 .SH "AUTHOR"
 .IX Header "AUTHOR"
 John M Collins, Xi Software Ltd.
