--- a/doc/poddoc/man/spwrite.8
+++ b/doc/poddoc/man/spwrite.8
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SPWRITE 8"
-.TH SPWRITE 8 "2008-07-12" "GNUspool Release 23" "GNUspool Print Manager"
+.TH SPWRITE 8 "2008-08-18" "GNUspool Release 1" "GNUspool Print Manager"
 .SH "NAME"
 spwrite \- write messages
 .SH "SYNOPSIS"
@@ -139,7 +139,7 @@ spwrite \- write messages
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
 \&\fBSpwrite\fR sends messages to users' terminals in response to the \f(CW\*(C`\-w\*(C'\fR
-and \f(CW\*(C`\-A\*(C'\fR options of \fIspr\fR\|(1). It is used in preference to the \fIwrite\fR\|(1)
+and \f(CW\*(C`\-A\*(C'\fR options of \fIgspl\-pr\fR\|(1). It is used in preference to the \fIwrite\fR\|(1)
 command as this picks just one (and usually the wrong one!) of the
 terminals at which the user may be logged in, and does not display a
 suitable name for the originator of messages.
