--- a/doc/poddoc/man/xtlpq.8
+++ b/doc/poddoc/man/xtlpq.8
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "XTLPQ 8"
-.TH XTLPQ 8 "2001-03-21" "GNUspool Release 23" "GNUspool Print Manager"
+.TH XTLPQ 8 "2008-08-18" "GNUspool Release 1" "GNUspool Print Manager"
 .SH "NAME"
 xtlpq \- support displaying job list on LPD protocol servers
 .SH "SYNOPSIS"
@@ -143,7 +143,7 @@ xtlpq \- support displaying job list on LPD protocol servers
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
 \&\fBxtlpq\fR obtains and outputs a list of pending jobs on an external
-print server supporting the \s-1LPD\s0 protocol. It is invoked by \fIsp.lpq\fR\|(1)
+print server supporting the \s-1LPD\s0 protocol. It is invoked by \fIgspl\-lpq\fR\|(1)
 and is not intended for general use.
 .SH "OPTIONS"
 .IX Header "OPTIONS"
@@ -165,7 +165,7 @@ Specify outgoing \s-1IP\s0 address.
 Produce a long listing.
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
-\&\fIsp.lpq\fR\|(1),
+\&\fIgspl\-lpq\fR\|(1),
 \&\fIspsyntax\fR\|(5),
 \&\fIxtlpc\fR\|(8),
 \&\fIxtlprm\fR\|(8).
