--- a/doc/poddoc/man/spdinit.8
+++ b/doc/poddoc/man/spdinit.8
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SPDINIT 8"
-.TH SPDINIT 8 "2008-07-12" "GNUspool Release 23" "GNUspool Print Manager"
+.TH SPDINIT 8 "2008-08-18" "GNUspool Release 1" "GNUspool Print Manager"
 .SH "NAME"
 spdinit \- interpret setup files
 .SH "SYNOPSIS"
@@ -150,7 +150,7 @@ on the result to see whether setup files have produced the expected
 result.
 .SH "FILES"
 .IX Header "FILES"
-\&\fI/etc/gnuspool.conf\fR
+\&\fIgnuspool.conf\fR
 master configuration file
 .PP
 \&\fIint-config\fR
@@ -176,7 +176,7 @@ error log file
 .PD
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
-\&\fIspstart\fR\|(1),
+\&\fIgspl\-start\fR\|(1),
 \&\fIgnuspool.conf\fR\|(5),
 \&\fIgnuspool.hosts\fR\|(5),
 \&\fIspd\fR\|(8),
@@ -184,7 +184,7 @@ error log file
 .SH "DIAGNOSTICS"
 .IX Header "DIAGNOSTICS"
 \&\fBspdinit\fR is usually invoked indirectly, via \fIspd\fR\|(8) and \fIspshed\fR\|(8)
-from system startup procedures or other programs such as \fIspstart\fR\|(1).
+from system startup procedures or other programs such as \fIgspl\-start\fR\|(1).
 .PP
 Diagnostics are not written to any terminal but to the file
 \&\fIspshed_reps\fR.
