--- a/doc/poddoc/man/spshed.8
+++ b/doc/poddoc/man/spshed.8
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SPSHED 8"
-.TH SPSHED 8 "2008-07-12" "GNUspool Release 23" "GNUspool Print Manager"
+.TH SPSHED 8 "2008-08-18" "GNUspool Release 1" "GNUspool Print Manager"
 .SH "NAME"
 spshed \- spool scheduler
 .SH "SYNOPSIS"
@@ -142,10 +142,10 @@ spshed \- spool scheduler
 and document management system.
 .PP
 To start \fBGNUspool\fR, \fBspshed\fR should be started. This should normally
-be done using \fIspstart\fR\|(1), which restarts it and passes the appropriate
+be done using \fIgspl\-start\fR\|(1), which restarts it and passes the appropriate
 options. This may be put within the Operating System startup scripts.
 .PP
-Likewise to halt it, \fIsstop\fR\|(1) should be invoked. This should be put,
+Likewise to halt it, \fIgspl\-stop\fR\|(1) should be invoked. This should be put,
 using the \fB\-y\fR option, in any system shutdown
 routines.
 .PP
@@ -155,14 +155,13 @@ to attempt to tidy up any \s-1IPC\s0 facilities before shutting down.
 .PP
 Information, either in respect of other machines to connect
 to, or pre-existing jobs and printers on the current machine, are read
-from the files \fI/etc/gnuspool.hosts\fR and the directory
-\&\fI/var/spool/gnuspool\fR respectively.
+from the files \fIgnuspool.hosts\fR and the spool directory respectively.
 .PP
 If a networked version of \fBGNUspool\fR is being run, then a \*(L"slave\*(R"
 \&\fBspshed\fR process is spawned to monitor and process incoming network
 messages. Incoming remotely-submitted jobs and \s-1API\s0 interfaces are
 handled via a separate process \fIxtnetserv\fR\|(8), which is also invoked as
-appropriate by \fIspstart\fR\|(1).
+appropriate by \fIgspl\-start\fR\|(1).
 .PP
 Appropriate log messages are written by \fBspshed\fR and other system
 processes to a log file, \fIspshed_reps\fR. Be sure to
@@ -170,17 +169,14 @@ check this file for any error messages relevant to any problems you
 encounter.
 .SH "FILES"
 .IX Header "FILES"
-\&\fI/etc/gnuspool.hosts\fR
+\&\fIgnuspool.hosts\fR
 host names and descriptions
 .PP
-\&\fI/etc/gnuspool.conf\fR
+\&\fIgnuspool.conf\fR
 master configuration file
 .PP
 \&\fIint-config\fR
 message file
-.PP
-\&\fI/var/spool/gnuspool\fR
-spool directory
 .PP
 \&\fIspshed_jfile\fR
 job file
@@ -266,32 +262,32 @@ The port numbers are set up in the \fI/etc/services\fR file when
 \&\fBGNUspool\fR is first installed.
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
-\&\fIspr\fR\|(1),
-\&\fIspq\fR\|(1),
-\&\fIspuser\fR\|(1),
-\&\fIsqdel\fR\|(1),
-\&\fIsqchange\fR\|(1),
-\&\fIsqlist\fR\|(1),
-\&\fIsplist\fR\|(1),
-\&\fIspcharge\fR\|(1),
-\&\fIspstart\fR\|(1),
-\&\fIsstop\fR\|(1),
+\&\fIgspl\-pr\fR\|(1),
+\&\fIgspl\-pq\fR\|(1),
+\&\fIgspl\-puser\fR\|(1),
+\&\fIgspl\-qdel\fR\|(1),
+\&\fIgspl\-qchange\fR\|(1),
+\&\fIgspl\-qlist\fR\|(1),
+\&\fIgspl\-plist\fR\|(1),
+\&\fIgspl\-charge\fR\|(1),
+\&\fIgspl\-start\fR\|(1),
+\&\fIgspl\-stop\fR\|(1),
 \&\fIgnuspool.conf\fR\|(5),
 \&\fIgnuspool.hosts\fR\|(5),
-\&\fIcjlist\fR\|(8),
-\&\fIcplist\fR\|(8),
+\&\fIgspl\-cjlist\fR\|(8),
+\&\fIgspl\-cplist\fR\|(8),
 \&\fIdosspwrite\fR\|(8),
 \&\fIripc\fR\|(8),
 \&\fIspd\fR\|(8),
 \&\fIspdinit\fR\|(8),
 \&\fIspmdisp\fR\|(8),
 \&\fIspwrite\fR\|(8),
-\&\fIspuconv\fR\|(8),
+\&\fIgspl\-spuconv\fR\|(8),
 \&\fIxtnetserv\fR\|(8).
 .SH "DIAGNOSTICS"
 .IX Header "DIAGNOSTICS"
 \&\fBspshed\fR is invoked from system startup procedures or other programs
-such as \fIspstart\fR\|(1). Thereafter it runs as a \*(L"daemon process\*(R" and
+such as \fIgspl\-start\fR\|(1). Thereafter it runs as a \*(L"daemon process\*(R" and
 diagnostics are not written to any terminal but to the file
 \&\fIspshed_reps\fR.
 .PP
