--- a/doc/poddoc/man/xtlprm.8
+++ b/doc/poddoc/man/xtlprm.8
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "XTLPRM 8"
-.TH XTLPRM 8 "2001-03-21" "GNUspool Release 23" "GNUspool Print Manager"
+.TH XTLPRM 8 "2008-08-18" "GNUspool Release 1" "GNUspool Print Manager"
 .SH "NAME"
 xtlprm \- support removing jobs on LPD protocol servers
 .SH "SYNOPSIS"
@@ -143,7 +143,7 @@ xtlprm \- support removing jobs on LPD protocol servers
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
 \&\fBxtlprm\fR deletes pending jobs on an external print server supporting
-the \s-1LPD\s0 protocol. It is invoked by \fIsp.lprm\fR\|(1) and is not intended for
+the \s-1LPD\s0 protocol. It is invoked by \fIgspl\-lprm\fR\|(1) and is not intended for
 general use.
 .SH "OPTIONS"
 .IX Header "OPTIONS"
@@ -165,7 +165,7 @@ Specify outgoing \s-1IP\s0 address.
 Specify a user name.
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
-\&\fIsp.lprm\fR\|(1),
+\&\fIgspl\-lprm\fR\|(1),
 \&\fIspsyntax\fR\|(5),
 \&\fIxtlpc\fR\|(8),
 \&\fIxtlpq\fR\|(8).
